--- a/style.css
+++ b/style.css
@@ -93,16 +93,16 @@ header {
 
 .img-wrapper {
   width: 100%;
-  height: 40%;
+  height: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 .img-wrapper img {
   width: 100%;
-  height: 40%;
+  height: 100%;
   object-fit: cover;
-  opacity: 0.7;
+  opacity: 0.5;
   animation: zoom 25s;
 }
 
@@ -117,7 +117,7 @@ header {
 
 .banner {
   position: absolute;
-  top: 15%;
+  top: 30%;
   left: 15%;
 }
 
@@ -125,7 +125,7 @@ header {
   color: #ffffff;
   font-size: 3.5rem;
   font-family: var(--font-primary);
-  font-weight: 75;
+  font-weight: 200;
   text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
   line-height: 3.5rem;
   margin-bottom: 2rem;
@@ -143,7 +143,21 @@ header {
   animation: moveBanner 1s 0.7s forwards;
 }
 
-
+.banner button {
+  font-family: var(--font-action);
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to left, #a044ff, #6a3093);
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0;
+  animation: moveBanner 1s 0.9s forwards;
+}
 
 @keyframes moveBanner {
   0% {
@@ -202,7 +216,7 @@ header {
 }
 
 .social-media i {
-  background-color: #1511e2;
+  background-color: #6a3093;
   color: rgba(255, 255, 255, 1);
   height: 2.5rem;
   width: 2.5rem;
@@ -215,7 +229,42 @@ header {
 }
 
 .social-media i:hover {
-  background-color: #1511e2;
+  background-color: #a044ff;
+}
+
+.cadapio {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, 6rem);
+  row-gap: 0.5rem;
+}
+
+.conhecimento:nth-child(1) {
+  grid-column: 3 / 6;
+  grid-row: 1 / 2;
+}
+
+.conhecimento:nth-child(2) {
+  grid-column: 3 / 6;
+  grid-row: 2 / 2;
+}
+
+.conhecimento:nth-child(3) {
+  grid-column: 5 / 6;
+  grid-row: 1 / 2;
+}
+
+.conhecimento:nth-child(4) {
+  grid-column: 5 / 6;
+  grid-row: 2 / 2;
+}
+
+
+
+.sessao-cadapio {
+  background-color: #1192dd;
+  height: 100%;
 }
 
 .sessao-header {
@@ -228,6 +277,7 @@ header {
   font-family: var(--font-primary);
   font-size: 3rem;
   color: #4b4b4b;
+  border-bottom: solid 3px #6a3093;
   margin-bottom: 1.5rem;
 }
 
@@ -235,8 +285,8 @@ header {
 
 .projetos {
   display: flex;
-  justify-content: space-around;
-  margin-bottom: 1rem;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
 }
 
 .card {
@@ -248,8 +298,8 @@ header {
 .card-img-wrapper {
   width: 100%;
   height: 100%;
-  background-color: #0c0a55;
-  border-radius: 1rem;
+  background-color: #262626;
+  border-radius: 0.5rem;
 }
 
 .card-img-wrapper img {
@@ -298,14 +348,14 @@ header {
 }
 
 .btn {
-  background: #1511e2;
-  background: -webkit-linear-gradient(to right, #054de9, #1511e2);
-  background: linear-gradient(to left, #054de9, #1511e2);
+  background: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to left, #a044ff, #6a3093);
   font-family: var(--font-action);
   color: #eee;
   border-radius: 0.5rem;
   border: none;
-  box-shadow: 0 0.1rem 0.8rem rgba(22, 149, 199, 0.4);
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
 
 .card-info button {
@@ -415,8 +465,6 @@ header {
   cursor: pointer;
   text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
   box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
-  background: -webkit-linear-gradient(to right, #054de9, #1511e2);
-  background: linear-gradient(to left, #054de9, #1511e2);
 }
 
 .preenchido{
@@ -446,9 +494,9 @@ header {
   position: absolute;
   top: -2.5rem;
   left: 2rem;
-  background: #1511e2;
-  background: -webkit-linear-gradient(to right, #054de9, #1511e2);
-  background: linear-gradient(to left, #054de9, #1511e2);
+  background: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to left, #a044ff, #6a3093);
   padding: 0 3rem;
   color: #fff;
   font-family: var(--font-primary);
@@ -486,14 +534,12 @@ header {
   padding: 1rem;
   cursor: pointer;
   grid-column: 2;
-  background: -webkit-linear-gradient(to right, #054de9, #1511e2);
-  background: linear-gradient(to left, #054de9, #1511e2);
 }
 
 footer{
   width: 100%;
   height: 7rem;
-  background-color: #044104;
+  background-color: #17181b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -527,9 +573,9 @@ footer{
   bottom: 3rem;
   width: 3rem;
   height: 3rem;
-  background: #1511e2;
-  background: -webkit-linear-gradient(to right, #054de9, #1511e2);
-  background: linear-gradient(to left, #054de9, #1511e2);
+  background: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to left, #a044ff, #6a3093);
   display: flex;
   justify-content: center;
   align-items: center;
